--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         <ul class="factlist">
             
 <div>
-    <h2 class="period">Period</h2>
+    <h2 class="period">PERIOD</h2>
 <p>Late Jurassic</p>
 </div>
 
 <div>
-    <h2 class="diet">Diet</h2>
+    <h2 class="diet">DIET</h2>
 <p>Herbivore</p>
 </div>
 
 <div>
-    <h2 class="length">Length</h2>
+    <h2 class="length">LENGTH</h2>
 <p>9 m</p>
 </div>
         
